# DocSeal

./: .dockerignore  .gitignore  CLI_USAGE.md  DEPLOYMENT.md  DOCKER.md  DOCKER_SETUP.md  Dockerfile  Dockerfile.dev  FEATURE_CD_DOCKER.md  QUICKREF.txt  README.md  WORKFLOW_SUMMARY.md  docker-compose.yml  docseal  docseal-gui  docseal-root-ca.p12  docseal.bat  docseal.ps1  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: Matrix_Tests.yml  cd.yml  ci.yml  compatibility-matrix.yml  publish-pypi.yml  quality-security.yml  release.yml  tests.yml
completions/: docseal.bash
data/: .gitkeep
data/certs/: .gitkeep
data/documents/: .gitkeep
data/signatures/: .gitkeep
scripts/: generate_test_keys.py  release.sh  validate-docker.sh
src/docseal/: __init__.py
src/docseal/audit/: logger.py
src/docseal/ca/: authority.py  certificates.py  exceptions.py  revocation.py
src/docseal/cli/: __init__.py  ca.py  colors.py  decrypt.py  encrypt.py  main.py  sign.py  verify.py
src/docseal/core/: __init__.py  decryption.py  encryption.py  envelope.py  service.py  signing.py  verification.py
src/docseal/crypto/: signing.py  verification.py
src/docseal/gui/: __init__.py  app.py  auth.py  ca_manager.py  ca_tabs.py  dashboard.py  login_screen.py  main_window.py  service_wrapper.py  styles.py  tabs.py  themes.py
src/docseal/utils/: validation.py
tests/: conftest.py  test_additional_coverage.py  test_audit_logging.py  test_ca_initialization.py  test_certificate_issuance.py  test_certificate_revocation.py  test_certificates.py  test_cli.py  test_cli_ca.py  test_cli_coverage.py  test_cli_integration.py  test_cli_main.py  test_cli_sign.py  test_cli_verify.py  test_document_signing.py  test_integration_enrollment.py  test_integration_tamper.py  test_integration_transcript.py  test_signature_verification.py  test_trust_enforcement.py  test_validation.py  test_verification.py  users.yaml
