[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "docseal"
version = "0.1.0"
description = "Secure academic document signing and verification tool"
authors = [{ name = "Rupesh Thakur" }]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "cryptography>=42.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "black",
    "mypy",
    "types-cryptography",
    "pip-audit",
    "bandit",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "B", "S"]
ignore = ["S101"]


[project.scripts]
docseal = "docseal.cli.main:main"

[tool.mypy]
strict = true
