[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "docseal"
version = "2.0.0"
description = "Secure academic document signing and verification tool"
authors = [{ name = "Rupesh Thakur" }]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "cryptography>=42.0",
]

[project.optional-dependencies]
gui = [
    "PyQt6>=6.6.0",
]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "black",
    "mypy",
    "types-cryptography",
    "pip-audit",
    "bandit",
    "PyQt6>=6.6.0",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "B", "S"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"tests/test_additional_coverage.py" = ["S106", "S108"]


[project.scripts]
docseal = "docseal.cli.main:main"
docseal-gui = "docseal.gui.app:main"

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = "docseal.gui.*"
ignore_errors = true
[tool.pytest.ini_options]
markers = [
    "crypto: marks tests as cryptography unit tests",
    "cli: marks tests as CLI interface tests",
    "integration: marks tests as integration tests",
]
testpaths = ["tests"]

[tool.coverage.run]
omit = [
    "src/docseal/gui/*",
    "src/docseal/main.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
fail_under = 70
